@@ -1,3 +1,7 @@
+2001-03-20  Bruno Haible  <haible@clisp.cons.org>
+
+        * iconv.m4 (jm_ICONV): Recommend GNU libiconv.
+
 2001-01-03  Bruno Haible  <haible@clisp.cons.org>
 
         * iconv.m4 (jm_ICONV): Also check whether the iconv declaration
